--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "passport-local": "^1.0.0",
     "pino": "^8.11.0",
     "pug": "^3.0.2",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   }
 }
