--- a/docs/routes/landing/notExist.yaml
+++ b/docs/routes/landing/notExist.yaml
@@ -6,4 +6,4 @@ paths:
         - landing
       responses:
         "200":
-          description: Solo va a mostrar un texto
+          description: Indica que la pagina no existe
