--- a/docs/routes/regLog/registerGet.yaml
+++ b/docs/routes/regLog/registerGet.yaml
@@ -1,7 +1,7 @@
 paths:
   /register:
     get:
-      summary: Retorna las funcionalidades del registro en caso de que no aa una sesion logueada
+      summary: Retorna las funcionalidades del registro en caso de que no haya una sesion logueada
       tags:
         - registerAndLogin
       responses:
