--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "desafio18_3_terceraentregaf",
+  "name": "pro-laps",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
